--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,17 @@ Docs/SiteAssets/Lists/e3c4f234-c321-4c76-a13c-5d3629aca426/e8d9910a-fb8d-4c0f-af
 Docs/SiteAssets/Lists/e3c4f234-c321-4c76-a13c-5d3629aca426/f810ae20-e326-4283-9b1d-58195991db88.jpeg
 Docs/SiteAssets/Lists/e3c4f234-c321-4c76-a13c-5d3629aca426/fff664a0-a90b-437a-913f-1f10867a472f.jpeg
 Docs/SiteAssets/SitePages/Winter/3492133639-christmas-winter.gif
+Temp/TemplateA1 - Technical Support.xml
+Temp/TemplateA2- System Automation.xml
+Temp/TemplateA3- Security Operation.xml
+Temp/TemplateA4-Security Campus.xml
+Temp/TemplateA5- GA Service.xml
+Temp/TemplateA6 - GA Relations.xml
+Temp/TemplateA7-GA Program.xml
+Temp/TemplateA10- GA Documentation.xml
+Temp/TemplateA11- GA Business.xml
+Temp/TemplateA12 - CCC 911.xml
+Temp/TemplateA13 - Security Director Office.xml
+Temp/Templateالعواصم.xml
+Temp7/TemplateCountries.xml
+Temp7/Templateالعواصم.xml
