--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@ Temp/TemplateA13 - Security Director Office.xml
 Temp/Templateالعواصم.xml
 Temp7/TemplateCountries.xml
 Temp7/Templateالعواصم.xml
+ExportLibrary.ps1
